--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ body{
 #skills h1{
     width: 100%;
     height: 80px;
-    background-color: #8EE4AF;
+    /* background-color: #8EE4AF; */
     padding: 4vw;
     color: white;
     text-transform: uppercase;
